--- a/Task_19_3_2025/Angular_Task2/angular_task2.client/src/app/category/category.component.html
+++ b/Task_19_3_2025/Angular_Task2/angular_task2.client/src/app/category/category.component.html
@@ -1,14 +1,13 @@
-
-
-
-<div *ngFor="let item of AllData">
-  <div class="card" style="width: 18rem;">
-    <img class="card-img-top" src="..." alt="Card image cap">
+<div *ngFor="let item of AllData | paginate: { itemsPerPage: 2, currentPage: p }">
+  <div class="card mb-3" style="max-width: 18rem;">
+    <img class="card-img-top" src="..." alt="Image of {{item.name}}">
     <div class="card-body">
       <h5 class="card-title">{{item.name}}</h5>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <bu routerLink="/Product/{{item.id}}" class="btn btn-primary">Show All Product</bu>
+      <button routerLink="/Product/{{item.id}}" class="btn btn-primary">Show All Product</button>
     </div>
   </div>
 </div>
+
+<pagination-controls (pageChange)="p = $event"></pagination-controls>
 
